tests/types/errors/unit_assign_value.mochi
// MEP-4 P19: a non-unit value cannot be bound to a unit-typed name.
let x: unit = 1
